unpackaged/main/default/objects/ImpWiz_Banner_Setting__mdt/ImpWiz_Banner_Setting__mdt.object-meta.xml
<CustomObject>
    <label>ImpWiz Banner Setting</label>
    <pluralLabel>ImpWiz Banner Settings</pluralLabel>
</CustomObject>