unpackaged/main/default/objects/ImpWiz_Banner_Setting__mdt/fields/Banner_Content__c.field-meta.xml
<CustomField>
    <fullName>Banner_Content__c</fullName>
    <label>Banner Content</label>
    <type>TextArea</type>
</CustomField>