unpackaged/main/default/objects/ImpWiz_Banner_Setting__mdt/fields/Banner_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Banner_End_Date__c</fullName>
    <label>Banner End Date</label>
    <type>Date</type>
</CustomField>