unpackaged/main/default/objects/ImpWiz_Banner_Setting__mdt/fields/Banner_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Banner_Start_Date__c</fullName>
    <label>Banner Start Date</label>
    <type>Date</type>
</CustomField>