unpackaged/main/default/objects/ImpWiz_Banner_Setting__mdt/fields/Banner_Title__c.field-meta.xml
<CustomField>
    <fullName>Banner_Title__c</fullName>
    <label>Banner Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>